--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -5,8 +5,8 @@
 // 3. You can override them below!
 
 // General style
-$font-family-sans-serif: $body-font;
-$headings-font-family:   $headers-font;
+$font-family-sans-serif: $montserrat-font;
+$headings-font-family:   $raleway-font;
 $body-bg:                $light-gray;
 $font-size-base:         1rem;
 
