--- a/app/views/pages/destinations.html.erb
+++ b/app/views/pages/destinations.html.erb
@@ -1,3 +1,35 @@
 destinations
-
 Cards choix des destinations
+<div class="container">
+  <div class="cards mt-4">
+    <div class="card-destination" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+      Je suis Flex
+      <%= link_to "Destination",  dashboard_path, class: "btn btn-primary" %>
+    </div>
+
+    <div class="card-destination" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+      Je suis un Frérot
+      <%= link_to "Destination", dashboard_path, class: "btn btn-primary" %>
+    </div>
+
+    <div class="card-destination" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+      Je suis Ermanno
+      <%= link_to "Destination", dashboard_path, class: "btn btn-primary" %>
+    </div>
+
+    <div class="card-destination" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+      Je suis Luc
+      <%= link_to "Destination", dashboard_path, class: "btn btn-primary" %>
+    </div>
+
+    <div class="card-destination" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+      Je suis Martin
+      <%= link_to "Destination", dashboard_path, class: "btn btn-primary" %>
+    </div>
+
+    <div class="card-destination" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+      Je suis Valentine
+      <%= link_to "Destination", dashboard_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
