diverses choses sur le front

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,10 @@
 // Define variables for your color scheme
 
+$sky-flex: #0AAFE6;
+$ocre-flex: #CC4D23;
+$blue-flex: #2984DA;
+$yellow-flex: #F89821;
+
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
