--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,19 +13,17 @@
   align-items: center;
   background-size: cover;
   background-position: center;
-  border: solid;
+  border-width: thin;
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  color: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  color: black;
   display: flex;
   flex-direction: column;
-  font-size: 24px;
-  font-weight: bold;
+  position: relative;
   height: 200px;
   justify-content: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   width: 100%;
-
 
   img {
     width: 100%;
@@ -43,6 +41,7 @@
     font-size: 17px;
   }
 }
+
 
 
 // Smallest device
