--- a/app/views/pages/destinations.html.erb
+++ b/app/views/pages/destinations.html.erb
@@ -6,7 +6,7 @@
           <img class="card-img-top" src= <%= destination["img_src"]%> alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title"><p><%= destination["pays"] %></p></h5>
-            <p class="card-text"><p><%= destination["ville"] %></p></p>
+            <p class="card-text"><p><%= destination["region"] %></p></p>
             <a href="#" class="btn btn-primary">En savoir plus</a>
           </div>
         </div>
