--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,12 +1,19 @@
 .cards {
   display: grid;
-  border-radius: 8px;
+  // border-radius: 8px;
   position: relative;
   overflow: hidden;
-  box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
+  // box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
   height: fit-content;
+  width: fit-content;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
+  gap: 16px;
+}
+
+#card-id {
+  border-radius: 10px;
+  overflow: hidden;
+  // box-shadow: 5px 3px 10px rgba(0, 0, 0, 0);
 }
 
 .card-destination {
@@ -20,13 +27,13 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  height: 200px;
+  height: 100px;
   justify-content: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  width: 100%;
+  // width: 100%;
 
   img {
-    width: 100%;
+    width: fit-content;
     height: 300px;
     object-fit: cover;
   }
