--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,9 +1,10 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "banner";
 @import "button";
 @import "card";
 @import "form_legend_clear";
+@import "loader";
 @import "navbar";
 @import "footer";
-@import "banner";
