--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,17 +5,13 @@
       <div class="cards-homepage mt-4">
         <div class="d-flex justify-content-center gap-3">
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('Vigne.jpg')%>)">
-              <%= link_to "Ma destination",  travels_path, class: "" %>
+              <%= link_to "Ma destination",  travels_path, class: "btn-home" %>
           </div>
 
           <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('Vigne.jpg')%>)">
-              <%= link_to "Inspirez-moi", travels_path, class: "btn-ok" %>
+              <%= link_to "Inspirez-moi", travels_path, class: "btn-home" %>
           </div>
         </div>
       </div>
   </div>
 </div>
-
-<h1>Photo Details</h1>
-<img src="<%= @img_src %>" alt="Target Photo">
-<p><%= @text_content %></p>
