--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -15,3 +15,18 @@
     background-color: #2984DA;
   }
 }
+
+.btn-home {
+  border-radius: 8px;
+  color: whitesmoke;
+  background-color: $ocre-flex;
+  margin-top: 5px;
+  padding: 7px;
+  text-decoration: none;
+
+
+  &:hover {
+    color: white;
+    background-color: #2984DA;
+  }
+}
