--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,5 +1,8 @@
-<%= render "shared/form", travel: @travel %>
+<div data-controller="loader">
+  <%= render "shared/form", travel: @travel %>
 
-<div class="loader">
-  searching
+  <div class="d-none" data-loader-target="loader" style="padding-top:205.128%;position:relative;">
+    <iframe src="https://gifer.com/embed/6os" width="100%" height="100%" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen>
+    </iframe>
+  </div>
 </div>
