--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,6 +1,5 @@
 <div data-controller="loader">
-  <%= render "shared/formsearch", travel: @travel %>
-
+  <%= render "shared/form", travel: @travel %>
   <div class="d-none" data-loader-target="loader" >
     <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
       <%= image_tag "SnoopDogg.gif", class: "h-75"%>
