--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="loader">
-  <%= render "shared/form", travel: @travel %>
+  <%= render "shared/formsearch", travel: @travel %>
 
   <div class="d-none" data-loader-target="loader" >
     <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
