--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,10 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 40px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
@@ -28,8 +28,4 @@
   color: #D23333;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
+// position: absolute;
