--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,8 @@
         <div class="d-flex justify-content-center gap-3">
           <%= form_tag(travels_path, method: "get") do %>
             <%= text_field_tag :destination, "", placeholder: "Ma destination" %>
-            <%= submit_tag "Go", class: "btn-home" %>
+            <%= link_to "Go", search_path, class: "btn-home" %>
+            <%# <%= submit_tag "Go", class: "btn-home" %>
           <% end %>
 
           <%= link_to "Inspirez-moi", search_path, class: "btn-home" %>
