--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,41 +1,55 @@
-Dashboard
 <div class="container">
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Voyage 1</h5>
-          <%# <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> %>
+  <div class="justify-content-center align-items-center mt-3">
+    <h3 class="text-center"><strong>Choisissez TravelFlex</strong></h3>
+      <div class="row rowalign-item-center justify-content-center">
+        <div class="col">
+          <div class="card">
+            <%= image_tag 'photo-destination/argentine.jpg', class: "card-img-top" %>
+            <div class="card-body">
+              <p class="card-title text-center">Voyage 1</p>
+            </div>
+          </div>
         </div>
+        <div class="col">
+          <div class="card">
+            <%= image_tag 'photo-destination/italie.jpg', class: "card-img-top" %>
+            <div class="card-body">
+              <p class="card-title text-center">Voyage 2</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <%= image_tag 'photo-destination/new-york.jpg', class: "card-img-top" %>
+            <div class="card-body">
+              <p class="card-title text-center">Voyage 3</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <%= image_tag 'photo-destination/nouvelle-zelande.jpg', class: "card-img-top" %>
+            <div class="card-body">
+              <p class="card-title text-center">Voyage 4</p>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <div class="justify-content-center align-items-center mt-3">
+    <h3 class="text-center"><strong>Votre voyage</strong></h3>
+    <div class="col">
+      <div class="cards">
+         <div class="card-trip-show">
+            <div class="d-flex mx-auto p-2">
+                <div style="width: 50%">
+                Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1
+                </div>
+                  <%= image_tag 'photo-destination/argentine.jpg', class: "vine-img me-3 w-50" %>
+            </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
     </div>
   </div>
 </div>
