--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,11 @@
 Dashboard
+
+<%#
+  @flats = Flat.all
+
+  @markers = @flats.geocoded.map do |flat|
+    {
+      lat: flat.latitude,
+      lng: flat.longitude
+    }
+  end %>
