modif bouton carousel

--- a/app/views/pages/destinations.html.erb
+++ b/app/views/pages/destinations.html.erb
@@ -27,7 +27,7 @@
               data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <%# <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> %>
                 <button type="button" class="btn btn-primary">Choisir cette destination</button>
               </div>
             </div>
