--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="justify-content-center align-items-center mt-3">
-    <h3 class="text-center"><strong>Choisissez TravelFlex</strong></h3>
+    <h3 class="text-center"><strong>Vos voyages</strong></h3>
       <div class="row rowalign-item-center justify-content-center">
         <div class="col">
           <div class="card">
