--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <p class="text-center">Pour voyager, il faut être flex</p>
       <div class="cards-homepage mt-4">
         <div class="d-flex justify-content-center gap-3">
-          <%= form_tag(travels_path, method: "get") do %>
+          <%= form_tag(search_path, method: "get") do %>
             <%= text_field_tag :destination, "", placeholder: "Ma destination" %>
             <%= link_to "Go", search_path, class: "btn-home" %>
             <%# <%= submit_tag "Go", class: "btn-home" %>
