--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
     <%= favicon_link_tag "favicon.png", rel: "icon", type: "image/png" %>
   </head>
 
-  <body><%= render "shared/navbar" %>
+  <body><%= render "shared/navbar"%>
 <%= render "shared/flashes" %>
-
-    <%= yield %>
-  <%= render "shared/footer" %>
+  <div class="wrapper">
+      <%= yield %>
+  </div>
+    <%= render "shared/footer" %>
   </body>
 </html>
