--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,9 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/chaisebasse/TravelFlex"><i class="fab fa-github"></i></a>
+    <a href="https://www.routard.com/"><i class="fab fa-instagram"></i></a>
+    <a href="https://fr.bebee.com/bee/martin-boulland"><i class="fab fa-facebook"></i></a>
+    <a href="https://kitt.lewagon.com/camps/1211/classmates_game"><i class="fab fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
     Voyagez Flex <i class="fa-solid fa-earth-americas fa-spin"></i>
