--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -7,20 +7,20 @@
           <div class="card-group">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :budget, 'low', id: 'budget-low' %>
-                <%= f.label :budget_low, "Budget bas" %>
+                <%= f.radio_button :budget, '500€', id: 'budget-low' %>
+                <%= f.label :budget_low, "500€" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :budget, 'medium', id: 'budget-medium' %>
-                <%= f.label :budget_medium, "Budget moyen" %>
+                <%= f.radio_button :budget, '1000€', id: 'budget-medium' %>
+                <%= f.label :budget_medium, "1000€" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :budget, 'high', id: 'budget-high' %>
-                <%= f.label :budget_high, "Budget élevé" %>
+                <%= f.radio_button :budget, 'high', id: '+1500€' %>
+                <%= f.label :budget_high, "+1500€" %>
               </div>
             </div>
           </div>
@@ -73,20 +73,20 @@
           <div class="card-group">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :duration, 'short', id: 'duration-short' %>
-                <%= f.label :duration_short, "Courte durée" %>
+                <%= f.radio_button :duration, 'Week-end', id: 'duration-short' %>
+                <%= f.label :duration_short, "Week-end" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :duration, 'medium', id: 'duration-medium' %>
-                <%= f.label :duration_medium, "Durée moyenne" %>
+                <%= f.radio_button :duration, 'Une semaine', id: 'duration-medium' %>
+                <%= f.label :duration_medium, "Une semaine" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :duration, 'long', id: 'duration-long' %>
-                <%= f.label :duration_long, "Longue durée" %>
+                <%= f.radio_button :duration, '2 semaines', id: 'duration-long' %>
+                <%= f.label :duration_long, "2 semaines" %>
               </div>
             </div>
           </div>
