--- a/app/views/pages/destinations.html.erb
+++ b/app/views/pages/destinations.html.erb
@@ -24,7 +24,8 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Choisir cette destination</button>
+                <%= link_to "Choisir cette destination", details_path(destination: destination['pays']), class: "btn btn-primary", data: { controller: "destinations", action: "click->destinations#selectElement", destinationChoice: destination["pays"] } %>
+                <%# <button type="button" class="btn btn-primary">Choisir cette destination</button> %>
               </div>
             </div>
           </div>
