--- a/app/views/shared/_form1.html.erb
+++ b/app/views/shared/_form1.html.erb
@@ -1,10 +1,9 @@
-
 <div class="container">
   <%= form_with model: travel, url: search_path, html: { data: { action: "submit->loader#loading" } }, class: 'my-form-class mt-5' do |f| %>
-    <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel slide" id="carouselExampleIndicators">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="card-group">
+          <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
                 <%= f.radio_button :budget, 'low', id: 'budget-low' %>
@@ -25,9 +24,8 @@
             </div>
           </div>
         </div>
-
         <div class="carousel-item">
-          <div class="card-group">
+          <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
                 <%= f.radio_button :type_of_travelers, 'solo', id: 'travelers-solo' %>
@@ -48,9 +46,8 @@
             </div>
           </div>
         </div>
-
         <div class="carousel-item">
-          <div class="card-group">
+          <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
                 <%= f.radio_button :type_of_destination, 'beach', id: 'destination-beach' %>
@@ -71,9 +68,8 @@
             </div>
           </div>
         </div>
-
         <div class="carousel-item">
-          <div class="card-group">
+          <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
                 <%= f.radio_button :duration, 'short', id: 'duration-short' %>
@@ -94,8 +90,35 @@
             </div>
           </div>
         </div>
+        <div class="carousel-item">
+          <div class="card-group flex-column">
+            <div class="card">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <%= f.radio_button :season, 'spring', id: 'season-spring' %>
+                <%= f.label :season_spring, "Printemps" %>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <%= f.radio_button :season, 'summer', id: 'season-summer' %>
+                <%= f.label :season_summer, "Été" %>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <%= f.radio_button :season, 'autumn', id: 'season-autumn' %>
+                <%= f.label :season_autumn, "Automne" %>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <%= f.radio_button :season, 'winter', id: 'season-winter' %>
+                <%= f.label :season_winter, "Hiver" %>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
