--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,92 +1,92 @@
 
 <div class="container">
-  <%= form_with model: travel, url: search_path, html: { data: { action: "submit->loader#loading" } }, class: 'my-form-class mt-5' do |f| %>
+  <%= simple_form_for travel, url: search_path, html: { class: 'my-form-class mt-5', data: { action: "submit->loader#loading" } } do |f| %>
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="card-group">
+          <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :budget, 'low', id: 'budget-low' %>
-                <%= f.label :budget_low, "Budget bas" %>
+                <%= f.input :budget, as: :radio_buttons, collection: ['low', 'medium', 'high'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none" } %>
+                <%#= f.label :budget_low, "Budget bas" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :budget, 'medium', id: 'budget-medium' %>
-                <%= f.label :budget_medium, "Budget moyen" %>
+                <%#= f.radio_button :budget, 'medium', id: 'budget-medium' %>
+                <%#= f.label :budget_medium, "Budget moyen" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :budget, 'high', id: 'budget-high' %>
-                <%= f.label :budget_high, "Budget élevé" %>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card-group">
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :type_of_travelers, 'solo', id: 'travelers-solo' %>
-                <%= f.label :travelers_solo, "Voyageurs en solo" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :type_of_travelers, 'couple', id: 'travelers-couple' %>
-                <%= f.label :travelers_couple, "Couple" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :type_of_travelers, 'family', id: 'travelers-family' %>
-                <%= f.label :travelers_family, "Famille" %>
+                <%#= f.radio_button :budget, 'high', id: 'budget-high' %>
+                <%#= f.label :budget_high, "Budget élevé" %>
               </div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="card-group">
+          <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :type_of_destination, 'beach', id: 'destination-beach' %>
-                <%= f.label :destination_beach, "Plage" %>
+                <%#= f.radio_button :type_of_travelers, 'solo', id: 'travelers-solo' %>
+                <%#= f.label :travelers_solo, "Voyageurs en solo" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :type_of_destination, 'city', id: 'destination-city' %>
-                <%= f.label :destination_city, "Ville" %>
+                <%#= f.radio_button :type_of_travelers, 'couple', id: 'travelers-couple' %>
+                <%#= f.label :travelers_couple, "Couple" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :type_of_destination, 'mountain', id: 'destination-mountain' %>
-                <%= f.label :destination_mountain, "Montagne" %>
+                <%#= f.radio_button :type_of_travelers, 'family', id: 'travelers-family' %>
+                <%#= f.label :travelers_family, "Famille" %>
               </div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="card-group">
+          <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :duration, 'short', id: 'duration-short' %>
-                <%= f.label :duration_short, "Courte durée" %>
+                <%#= f.radio_button :type_of_destination, 'beach', id: 'destination-beach' %>
+                <%#= f.label :destination_beach, "Plage" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :duration, 'medium', id: 'duration-medium' %>
-                <%= f.label :duration_medium, "Durée moyenne" %>
+                <%#= f.radio_button :type_of_destination, 'city', id: 'destination-city' %>
+                <%#= f.label :destination_city, "Ville" %>
               </div>
             </div>
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.radio_button :duration, 'long', id: 'duration-long' %>
-                <%= f.label :duration_long, "Longue durée" %>
+                <%#= f.radio_button :type_of_destination, 'mountain', id: 'destination-mountain' %>
+                <%#= f.label :destination_mountain, "Montagne" %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card-group flex-column">
+            <div class="card">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <%#= f.radio_button :duration, 'short', id: 'duration-short' %>
+                <%#= f.label :duration_short, "Courte durée" %>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <%#= f.radio_button :duration, 'medium', id: 'duration-medium' %>
+                <%#= f.label :duration_medium, "Durée moyenne" %>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <%#= f.radio_button :duration, 'long', id: 'duration-long' %>
+                <%#= f.label :duration_long, "Longue durée" %>
               </div>
             </div>
           </div>
