--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -7,46 +7,22 @@
           <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.input :budget, as: :radio_buttons, collection: ['low', 'medium', 'high'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none" } %>
-                <%#= f.label :budget_low, "Budget bas" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :budget, 'medium', id: 'budget-medium' %>
-                <%#= f.label :budget_medium, "Budget moyen" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :budget, 'high', id: 'budget-high' %>
-                <%#= f.label :budget_high, "Budget élevé" %>
+                <%= f.input :budget, as: :radio_buttons, collection: ['bas', 'modéré', 'élevé'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none" } %>
               </div>
             </div>
           </div>
         </div>
+
         <div class="carousel-item">
           <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :type_of_travelers, 'solo', id: 'travelers-solo' %>
-                <%#= f.label :travelers_solo, "Voyageurs en solo" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :type_of_travelers, 'couple', id: 'travelers-couple' %>
-                <%#= f.label :travelers_couple, "Couple" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :type_of_travelers, 'family', id: 'travelers-family' %>
-                <%#= f.label :travelers_family, "Famille" %>
+                <%= f.input :type_of_travelers, as: :radio_buttons, collection: ['solo', 'couple', 'famille'], label_method: lambda { |item| render "shared/labels/type_of_travelers_label", item: item  }, input_html: { class: "d-none" } %>
               </div>
             </div>
           </div>
         </div>
+
         <div class="carousel-item">
           <div class="card-group flex-column">
             <div class="card">
@@ -69,6 +45,7 @@
             </div>
           </div>
         </div>
+
         <div class="carousel-item">
           <div class="card-group flex-column">
             <div class="card">
@@ -91,6 +68,7 @@
             </div>
           </div>
         </div>
+
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
