--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,7 +1,7 @@
-.carousel-control-prev-icon {
-  background-color: #CC4D23;
-}
+// .carousel-control-prev-icon {
+//   background-color: #CC4D23;
+// }
 
-.carousel-control-next-icon {
-  background-color: #CC4D23;
-}
+// .carousel-control-next-icon {
+//   background-color: #CC4D23;
+// }
