--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -3,84 +3,63 @@
   <%= simple_form_for travel, url: search_path, html: { class: 'my-form-class mt-5', data: { action: "submit->loader#loading" } } do |f| %>
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-inner">
+
         <div class="carousel-item active">
           <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.input :budget, as: :radio_buttons, collection: ['bas', 'modéré', 'élevé'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none" } %>
+                <%= f.input :budget, as: :radio_buttons, collection: ['< 500 €', 'de 500 € à 1 000 €', '> 1 000 €'], label_method: lambda { |item| render "shared/labels/budget_label", item: item  }, input_html: { class: "d-none" } %>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="carousel-item">
+        <div class="carousel-item active">
           <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%= f.input :type_of_travelers, as: :radio_buttons, collection: ['solo', 'couple', 'famille'], label_method: lambda { |item| render "shared/labels/type_of_travelers_label", item: item  }, input_html: { class: "d-none" } %>
+                <%= f.input :travelers, as: :radio_buttons, collection: ['solo', 'couple', 'famille'], label_method: lambda { |item| render "shared/labels/traveler_type_label", item: item  }, input_html: { class: "d-none" } %>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="carousel-item">
+        <div class="carousel-item active">
           <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :type_of_destination, 'beach', id: 'destination-beach' %>
-                <%#= f.label :destination_beach, "Plage" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :type_of_destination, 'city', id: 'destination-city' %>
-                <%#= f.label :destination_city, "Ville" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :type_of_destination, 'mountain', id: 'destination-mountain' %>
-                <%#= f.label :destination_mountain, "Montagne" %>
+                <%= f.input :theme, as: :radio_buttons, collection: ['plage', 'ville', 'montagne'], label_method: lambda { |item| render "shared/labels/destination_type_label", item: item  }, input_html: { class: "d-none" } %>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="carousel-item">
+        <div class="carousel-item active">
           <div class="card-group flex-column">
             <div class="card">
               <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :duration, 'short', id: 'duration-short' %>
-                <%#= f.label :duration_short, "Courte durée" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :duration, 'medium', id: 'duration-medium' %>
-                <%#= f.label :duration_medium, "Durée moyenne" %>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-body d-flex align-items-center justify-content-center">
-                <%#= f.radio_button :duration, 'long', id: 'duration-long' %>
-                <%#= f.label :duration_long, "Longue durée" %>
+                <%= f.input :duration, as: :radio_buttons, collection: ['week-end', '1 semaine', '> 2 semaines'], label_method: lambda { |item| render "shared/labels/duration_label", item: item  }, input_html: { class: "d-none" } %>
               </div>
             </div>
           </div>
         </div>
 
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
     <div class="text-center mt-4">
       <%= f.submit "Soumettre", class: 'btn btn-home' %>
     </div>
+
   <% end %>
 </div>
