--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -46,7 +46,6 @@
       <div>duration: <%= t.duration %></div>
       <ul>
         <% t.activities.each do |a| %>
-
           <li>
            <div class="card">
             <div><h4>Description:</h4> <%= a.description %></div>
@@ -59,27 +58,19 @@
             </div>
           </li>
         <% end %>
+          <% @markers = t.activities.map do |activitie| %>
+          <%{ lat: activitie.lat.to_f, lng: activitie.long.to_f } %>
+          <% end %>
       </ul>
     </li>
+
+                <div style="width: 100%; height: 500px;"
+                data-controller="map"
+                data-map-markers-value="<%= @markers.to_json %>"
+                data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   <% end %>
 </ul>
 
-
-  <%# <div class="justify-content-center align-items-center mt-3">
-    <h3 class="text-center"><strong>Votre voyage</strong></h3>
-    <div class="col">
-      <div class="cards">
-         <div class="card-trip-show">
-            <div class="d-flex mx-auto p-2">
-                <div style="width: 50%">
-                Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1Voyage 1
-                </div>
-                <div style="width: 100%; height: 600px;"
-                data-controller="map"
-                data-map-markers-value="<%= @markers.to_json %>"
-                <%# data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div> %> %>
-
-                  <%= image_tag 'photo-destination/argentine.jpg', class: "vine-img me-3 w-50" %>
             </div>
       </div>
     </div>
