carousel en cours

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,14 +1,14 @@
 .btn-card-destination {
   border-radius: 8px;
   color: whitesmoke;
-  background-color: $ocre-flex;
+  background-color: #CC4D23;
   margin-top: 5px;
   padding: 7px;
   text-decoration: none;
   font-size: 14px;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
+  // position: absolute;
+  // bottom: 10px;
+  // right: 10px;
 
   &:hover {
     color: white;
@@ -29,8 +29,4 @@
     color: white;
     background-color: #2984DA;
   }
-}
-
-input:checked + label {
-  background-color: yellow;
 }
